@@ -1,5 +1,7 @@
 qtimageformats-opensource-src (5.2.0-3) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Do not install the development stuff of the plugins.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 31 Jan 2014 20:20:13 +0100
 
